[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/kota-removebg-preview(1).png" type="Texture" id=1]
[ext_resource path="res://dev/scenes/comp/msg_lbl.tscn" type="PackedScene" id=2]
[ext_resource path="res://dev/scripts/power_up.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/new_city_song.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 78, 66 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 98.5, 83.5 )

[node name="powerUp" type="RigidBody2D" groups=["power-up"]]
position = Vector2( 422, 244 )
mode = 1
contact_monitor = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 86, 74 )
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 176.0
margin_bottom = 149.0
texture = ExtResource( 1 )
expand = true

[node name="description" parent="." instance=ExtResource( 2 )]
text = "Touch / Press \"E\" to interact"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 88.5, 73.5 )
shape = SubResource( 2 )

[node name="collectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="actionBtn" type="Button" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 184.0
margin_bottom = 158.0
flat = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="actionBtn" to="." method="_on_actionBtn_pressed"]
